--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "devDependencies": {
     "archiver": "^3.0.0",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^4.3.0",
+    "html-inline-css-webpack-plugin": "^1.8.1",
     "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.11.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "raw-loader": "^3.0.0",
-    "terser-webpack-plugin": "^1.3.0",
+    "terser-webpack-plugin": "^4.1.0",
     "ts-loader": "^8.0.2",
     "typescript": "^3.9.7",
     "url-loader": "^4.1.0",
